# code_ex2_parmetis

./: .gitattribute  .gitignore  CMakeLists.txt  README.md
cmake/: MYPROJ-config.cmake.in  default.cmake  findlibs.cmake  macros.cmake
cmake/FindModules/: CMakeCache.txt  FindMETIS.cmake  FindParMETIS.cmake  MYPROJCmakeUtilities.cmake  ResolveCompilerPaths.cmake
ex_metis/: CMakeLists.txt  metis_test.cpp
ex_parmetis/: CMakeLists.txt  parmetis_test.cpp
ex_parmetisIO/: CMakeLists.txt  parmetisIO_test.cpp
ex_partmesh/: CMakeLists.txt  partmesh.cpp
